content/docs/1.0.0/connectors/cli-usage.md
# Connector CLI Usage

```sh
iofog-connector <command> <options>
```

## Commands

|                     |                                                        |
| ------------------- | ------------------------------------------------------ |
| [start](#start)     | Start connector service.                               |
| [stop](#stop)       | Stop connector service.                                |
| [help](#help)       | Display usage information.                             |
| [version](#version) | Display the software version and license information.  |
| [status](#status)   | Display current status information about the software. |

---

## start

Start the iofog-connector daemon

```sh
iofog-connector start
```

---

## stop

Stop the iofog-connector daemon

```sh
iofog-connector stop
```

---

## help

Display usage information.

```sh
iofog-connector help <options>
```

#### Options

|                    |
| ------------------ |
| **-h, -?, --help** |

---

## version

Display the software version and license information.

```sh
iofog-connector version <options>
```

#### Options

|                   |
| ----------------- |
| **-v, --version** |

---

## status

Display current status information about the software.

```sh
iofog-connector status
```
